found_online/tptp.cc/iptables.save.txt
# Generated by iptables-save v1.4.14 on Mon Dec 30 17:26:02 2013
*raw
:PREROUTING ACCEPT [167:11519]
:OUTPUT ACCEPT [43:4392]
COMMIT
# Completed on Mon Dec 30 17:26:02 2013
# Generated by iptables-save v1.4.14 on Mon Dec 30 17:26:02 2013
*nat
:PREROUTING ACCEPT [28:1645]
:INPUT ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
-A PREROUTING -i enp3s1f1 -p tcp -m tcp --dport 1721 -j DNAT --to-destination 172.17.10.1
-A PREROUTING -i enp3s1f1 -p tcp -m tcp --dport 1712 -j DNAT --to-destination 172.17.10.2
-A POSTROUTING -s 172.17.0.0/16 -o enp3s1f1 -j MASQUERADE
-A POSTROUTING -s 172.18.0.0/16 -o enp3s1f1 -j MASQUERADE
COMMIT
# Completed on Mon Dec 30 17:26:02 2013
# Generated by iptables-save v1.4.14 on Mon Dec 30 17:26:02 2013
*filter
:INPUT DROP [19:1031]
:FORWARD ACCEPT [75:5184]
:OUTPUT ACCEPT [43:4392]
-A INPUT -p tcp -m tcp --dport 22 -m state --state NEW -m recent --update --seconds 45 --hitcount 5 --name DEFAULT --rsource -j DROP
-A INPUT -p tcp -m tcp -m state --state NEW -m recent --update --seconds 1 --hitcount 16 --name DEFAULT --rsource -j DROP
-A INPUT -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A INPUT -i enp3s0 -j ACCEPT
-A INPUT -p icmp -j ACCEPT
-A INPUT -p gre -j ACCEPT
-A INPUT -i he-ipv6 -j ACCEPT
-A INPUT -p ipv6 -j ACCEPT
-A INPUT -i lo -j ACCEPT
-A INPUT -p tcp -m tcp --dport 113 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 22 -j ACCEPT
-A OUTPUT -d 62.93.193.11/32 -j DROP
-A OUTPUT -d 209.170.95.47/32 -j DROP
-A OUTPUT -d 209.170.95.52/32 -j DROP
-A OUTPUT -d 62.93.192.29/32 -j DROP
COMMIT
# Completed on Mon Dec 30 17:26:02 2013
